--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10003,4 +10003,13 @@ span.select2-selection.select2-selection--single:focus {
     padding-top: 0;
   }
 }
+
+
+.mae-logo {
+  width: 80px;
+  height: 80px;
+}
+
+
+
 /*# sourceMappingURL=style.css.map */
