--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10011,5 +10011,11 @@ span.select2-selection.select2-selection--single:focus {
 }
 
 
+.mae-loader {
+  width: 150px;
+  height: 150px;
+}
+
+
 
 /*# sourceMappingURL=style.css.map */
